added the docker/dcos configs

--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,7 @@
                     <div class="nav-header pull-left">
                         <div class="logo-wrap">
                             <a href="index.html">
-                                <img class="brand-img" src="images/logo.png" alt="brand"/>
-                                <span class="brand-text">Hound</span>
+                                <img class="brand-img" src="images/lightbend-logo-full-color-large.png" height="45" alt="Lightbend"/>
                             </a>
                         </div>
                     </div>	
